[package]
name = "caa_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version = "1.2.2", features = ["v4", "serde"]}
serde = {version = "1.0.149", features = ["derive"]}
serde_json = "1.0.89"
sharks = "0.5.0"
read_input = "0.8.6"
ciborium = "0.2.0"
rand = "0.7"
dryoc = { version = "0.4.2", features = ["serde"] }
