[package]
name = "caa_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dryoc = { version = "0.4.2", features = ["serde"] }
rand = { version = "0.8.4", features = ["serde"] }
sharks = "0.5.0"
uuid = {version = "1.2.2", features = ["v4", "serde"]}
serde = {version = "1.0.149", features = ["derive"]}
ciborium = "0.2.0"
read_input = "0.8.6"




